--- a/hello/src/main/resources/templates/member/myInfo.html
+++ b/hello/src/main/resources/templates/member/myInfo.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{/layouts/layout}">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
-<body>
-	<h3>내 정보</h3>
-	<div>이름 : </div>
+<body layout:fragment="container">
+	<h3 class="my-4"><a th:href="@{/}">내 정보</a></h3>
+	<div>이름 : <span th:text="${name}"></span></div>
+	<div>성별 : [[${gender}]]</div>
+	<div>성별 : [(${gender})]</div>
+<!--
+	[[ : html 태그가 escape되고 순수 텍스트로 표현
+	[( : html 태그가 unescape되어 태그로 해석된 텍스트 표현
+-->
+	<div th:text="|${name} : ${gender}|"></div>
+	<div th:text="${name} + ' : ' + ${gender}"></div>
+	<div th:text="${name} + ' : ' + ${phone ?: '없음'}"></div>
+	<div>성명 : 연락처 [[${name}]][[${phone}]]</div>
+
 </body>
 </html>
