--- a/smart/src/main/resources/templates/layouts/layout.html
+++ b/smart/src/main/resources/templates/layouts/layout.html
@@ -7,7 +7,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>스마트웹&amp;앱</title>
+        <th:block th:switch="${session.category}">
+        <title>스마트웹&amp;앱
+			<th:block th:case="cu">고객관리</th:block>
+			<th:block th:case="hr">사원관리</th:block>
+			<th:block th:case="no">공지사항</th:block>
+			<th:block th:case="bo">방명록</th:block>
+			<th:block th:case="da">공공데이터</th:block>
+			<th:block th:case="vi">시각화</th:block>
+			<th:block th:case="sbn">송빛나</th:block>
+		</title>
+        </th:block>
         
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" th:href="@{/img/hanul.ico}" />
@@ -31,15 +41,17 @@
             <div class="border-end bg-white" id="sidebar-wrapper">
                 <div class="sidebar-heading border-bottom bg-light">
                 	<a th:href="@{/}">
-                		<img style="width:20%" class="me-2"  src="<c:url value='/img/hanul.logo.png'/>">
+                		<img style="width:20%" class="me-2"  th:src="@{/img/hanul.logo.png}">
                 		<span>스마트 웹&amp;앱</span>
                 	</a>
                 </div>
                 <div class="list-group list-group-flush">
-                    <a th:href="@{/customer/list}" class="list-group-item list-group-item-action list-group-item-light p-3" >고객관리</a>
-                    <a th:href="@{/hr/list}" class="list-group-item list-group-item-action list-group-item-light p-3" >사원관리</a>
+                    <a th:href="@{/customer/list}" th:classappend="${session.category=='cu'} ? 'active'"
+                    	class="list-group-item list-group-item-action list-group-item-light p-3" >고객관리</a>
+                    <a th:href="@{/hr/list}" th:classappend="${session.category=='hr'} ? 'active'"
+                    	class="list-group-item list-group-item-action list-group-item-light p-3" >사원관리</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" >공지사항</a>
-                    <a class="ist-group-item list-group-item-action list-group-item-light p-3" >방명록</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" >방명록</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" >공공데이터</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" >시각화</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" >송빛나</a>
